[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["bearice"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1.4"
regex="1.4"
#pest="2"
#pest_derive = "2"
#pcre = "0.2.3"
cached = "0.40"
itertools = "0.10"
json = "0.12.4"
[lib]